YEL-43 [fix] code review 반영